[package]
name = "selenite-lamp-updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "3.2.22", features = ["derive"] }
notify = "5.0.0"
serde = { version = "1.0.146", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
selenite-lamp = { git = "https://github.com/julianandrews/selenite-lamp" }
toml = "0.5.9"
cron = "0.12.0"
chrono = "0.4.22"
futures = "0.3.25"
